[gd_scene load_steps=31 format=3 uid="uid://l0fc723m6sp6"]

[ext_resource type="Texture2D" uid="uid://li6mui3qvdwv" path="res://assets/player/Idle/idle-fram0.png" id="1_dqkch"]
[ext_resource type="Script" uid="uid://do48452fucrmk" path="res://scripts/player.gd" id="1_qlg0r"]
[ext_resource type="Texture2D" uid="uid://crksc2bxeck1q" path="res://assets/player/Idle/idle-frame1.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://c6m4ptfkvatuu" path="res://assets/player/Idle/idle-frame2.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://c7c5yfmeudlph" path="res://assets/player/Idle/idle-frame3.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://b6qgs50blt7km" path="res://assets/player/Walk/walk-frame0.png" id="6_ur7pv"]
[ext_resource type="Texture2D" uid="uid://ddxbygd74tlk2" path="res://assets/player/Jump/jump-frame0.png" id="6_y4r1p"]
[ext_resource type="Texture2D" uid="uid://bbnwrfpnvcv0o" path="res://assets/player/Walk/walk-frame1.png" id="7_y4r1p"]
[ext_resource type="Texture2D" uid="uid://mmxi7qnvr6sq" path="res://assets/player/Walk/walk-frame2.png" id="8_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dlkbshrewo18i" path="res://assets/player/Walk/walk-frame3.png" id="9_3v2ag"]
[ext_resource type="Texture2D" uid="uid://cxv3qnl4dxsbk" path="res://assets/coin/Gold_Coin1.png" id="11_d2wvv"]
[ext_resource type="FontFile" uid="uid://c4btunrphiwtm" path="res://assets/font.ttf" id="12_3v2ag"]
[ext_resource type="Texture2D" uid="uid://dvxkxc0mlnjfy" path="res://assets/background.png" id="13_jej6c"]
[ext_resource type="AudioStream" uid="uid://c0c20236kg3br" path="res://assets/sounds/jumping.mp3" id="14_f1ej7"]
[ext_resource type="Texture2D" uid="uid://clpresfqle52l" path="res://assets/dead.png" id="14_oprun"]
[ext_resource type="Texture2D" uid="uid://bccyj4bx44f35" path="res://assets/pixil-frame-0.png" id="14_qfm1y"]
[ext_resource type="Texture2D" uid="uid://d0pcdcse62534" path="res://assets/pixil-frame-1.png" id="15_4r5pv"]
[ext_resource type="Texture2D" uid="uid://dfb4p5wuh61ix" path="res://assets/pixil-frame-2.png" id="16_60mlk"]
[ext_resource type="AudioStream" uid="uid://dsfj3gcohv4sd" path="res://assets/sounds/death.mp3" id="16_a8ls1"]
[ext_resource type="Texture2D" uid="uid://ccgjq572f86ut" path="res://assets/x.png" id="17_60mlk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuyoq"]
size = Vector2(24, 109)

[sub_resource type="SpriteFrames" id="SpriteFrames_smehm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dqkch")
}, {
"duration": 1.0,
"texture": ExtResource("2_qlg0r")
}, {
"duration": 1.0,
"texture": ExtResource("3_tuyoq")
}, {
"duration": 1.0,
"texture": ExtResource("4_fjrip")
}],
"loop": false,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_y4r1p")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_y4r1p")
}, {
"duration": 1.0,
"texture": ExtResource("8_d2wvv")
}, {
"duration": 1.0,
"texture": ExtResource("9_3v2ag")
}, {
"duration": 1.0,
"texture": ExtResource("6_ur7pv")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_d2wvv"]
font = ExtResource("12_3v2ag")
font_size = 90
outline_size = 8
outline_color = Color(0.00351917, 0.00351917, 0.00351917, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fulsm"]
size = Vector2(55, 55)

[sub_resource type="LabelSettings" id="LabelSettings_60mlk"]
font = ExtResource("12_3v2ag")
font_size = 64
font_color = Color(1, 0.886275, 0.129412, 1)
outline_size = 16
outline_color = Color(0.00820202, 0.00820202, 0.00820202, 1)

[sub_resource type="Animation" id="Animation_oprun"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/dead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1490, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/dead2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-330, 340)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a8ls1"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/dead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1490, 340), Vector2(906, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/dead2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-330, 340), Vector2(250, 340)]
}

[sub_resource type="Animation" id="Animation_qfm1y"]
resource_name = "door"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ke2ow"]
resource_name = "pause"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfm1y"]
_data = {
&"RESET": SubResource("Animation_oprun"),
&"dead": SubResource("Animation_a8ls1"),
&"door": SubResource("Animation_qfm1y"),
&"pause": SubResource("Animation_ke2ow")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_qlg0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20.5)
shape = SubResource("RectangleShape2D_tuyoq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_smehm")
animation = &"run"
autoplay = "IDLE"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1007, 76)
texture = ExtResource("11_d2wvv")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 1071.0
offset_top = 1.0
offset_right = 1127.0
offset_bottom = 148.0
text = "0"
label_settings = SubResource("LabelSettings_d2wvv")
metadata/_edit_use_anchors_ = true

[node name="dead" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1490, 340)
scale = Vector2(2, 2)
texture = ExtResource("14_oprun")

[node name="dead2" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(-330, 340)
scale = Vector2(2, 2)
texture = ExtResource("14_oprun")
flip_h = true

[node name="TouchScreenButton3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(800, 425)
scale = Vector2(2, 2)
texture_normal = ExtResource("16_60mlk")
shape = SubResource("RectangleShape2D_fulsm")
action = "jump"

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(150, 425)
scale = Vector2(2, 2)
texture_normal = ExtResource("14_qfm1y")
shape = SubResource("RectangleShape2D_fulsm")
action = "right"

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(0, 425)
scale = Vector2(2, 2)
texture_normal = ExtResource("15_4r5pv")
shape = SubResource("RectangleShape2D_fulsm")
action = "left"

[node name="TouchScreenButton4" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(-22, -29)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("17_60mlk")
shape = SubResource("RectangleShape2D_fulsm")
action = "exit"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 508.0
offset_right = 669.0
offset_bottom = 88.0
text = "0 : 00"
label_settings = SubResource("LabelSettings_60mlk")

[node name="BG" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(0.769424, 0.73)
texture = ExtResource("13_jej6c")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_f1ej7")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_a8ls1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qfm1y")
}

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.3
shadow_enabled = true
shadow_color = Color(3.72304e-05, 3.72304e-05, 3.72304e-05, 0)
